--- a/linux-c201/PKGBUILD
+++ b/linux-c201/PKGBUILD
@@ -4,10 +4,11 @@
 buildarch=4
 
 pkgbase=linux-c201
-_srcname=linux-4.16
+_srcname=linux-4.17
 _kernelname=${pkgbase#linux}
 _desc="ARMv7 multi-platform"
-pkgver=4.16.10
+pkgver=4.17.0
+
 pkgrel=1
 rcnrel=armv7-x0
 arch=('armv7h')
@@ -16,7 +17,7 @@ license=('GPL2')
 makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils' 'bc' 'git' 'uboot-tools' 'vboot-utils' 'dtc')
 options=('!strip')
 source=("http://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
-        "http://www.kernel.org/pub/linux/kernel/v4.x/patch-${pkgver}.xz"
+        #"http://www.kernel.org/pub/linux/kernel/v4.x/patch-${pkgver}.xz"
         "http://rcn-ee.com/deb/sid-armhf/v${pkgver}-${rcnrel}/patch-${pkgver%.0}-${rcnrel}.diff.gz"
         '0001-ARM-atags-add-support-for-Marvell-s-u-boot.patch'
         '0002-ARM-atags-fdt-retrieve-MAC-addresses-from-Marvell-bo.patch'
@@ -38,22 +39,21 @@ source=("http://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
         '99-linux.hook'
         'config')
 
-md5sums=('1357fb4ee7c288fdeac5d4e0048f5c18'
-         'c6ccb6a158c063d25a1c07a5e65545b8'
-         'c834e43567f1c37e5e59be00153ff00d'
-         '38440ef4a8c52fae52c02e7b17698e9f'
-         '62016c2311ad894a145e2100074c5c65'
-         '7bb0eb2d0fb06666bedd4dc2cdbaa02c'
-         'ceb4743e81f96a78c7e6e9fdfae50ccb'
-         '3a9da57d484c6bcdcd620f0931827a24'
-         'd1ab6fc88aeb28013d496231b3c63682'
-         '6abeec83b3a5f5ea2676fe03ea97df73'
-         '10a0febbe2af946a12137cb574bd676b'
-         '966ddd9affd0237bf9fe7298eb26bfe5'
-         '32eed86641825eaed7e6f78c14cc19d8'
-         '21b75ae79dcb0994f7fd99f5062a8ef9'
-         '854888245f29013be06f762c6162a5b2'
-         '267d9dc5a1ec7232a2849cfad322209c'
+md5sums=('5bb13a03274b66b56c85b26682e407d7'
+         'b9e5c7fbb3025d4ec02b61319a1a9fad'
+         '659aa5898b6182ba855dff9584d0b77b'
+         '09112f7298d00fb453b6789286d01334'
+         'ada6bd5d1519869a0f60cc3523ea2394'
+         '7cf7295dd4150ecc78d9a37156946286'
+         'ff1771ffab749185fc5a0df1bd78ce4f'
+         '6580171cfdb1bca4f9e901be68aeeed0'
+         '2f3ad2a6d64ae13f6d80046efa067050'
+         'b8653cacf717217278c649bd2dea0f20'
+         '61f629a249a38aef979cab2be4d7bb7f'
+         '7e20b2245d031eb8443b040dac280a13'
+         'a4d211d0d0920f6f529c22273e1c4708'
+         '8b7f6296bb24f5d6b1d2088cd0fdcb79'
+         '52e2a87d059ea401640195b9f9253673'
          '4f2379ed84258050edb858ee8d281678'
          '61c5ff73c136ed07a7aadbf58db3d96a'
          '584777ae88bce2c5659960151b64c7d8'
@@ -65,7 +65,7 @@ prepare() {
   cd "${srcdir}/${_srcname}"
 
   # add upstream patch
-  git apply --whitespace=nowarn ../patch-${pkgver}
+  #git apply --whitespace=nowarn ../patch-${pkgver}
 
   # RCN patch
   git apply ../patch-${pkgver%.0}-${rcnrel}.diff
@@ -105,7 +105,7 @@ build() {
   #make menuconfig # CLI menu for configuration
   #make nconfig # new CLI menu for configuration
   #make xconfig # X-based configuration
-  #make oldconfig # using old config from previous kernel version
+  make oldconfig # using old config from previous kernel version
   # ... or manually edit .config
 
   # Copy back our configuration (use with new kernel version)
@@ -299,7 +299,7 @@ _package-headers() {
 
 _package-chromebook() {
   pkgdesc="The Linux Kernel - ${_desc} - Chromebooks"
-  depends=('linux-armv7')
+  depends=('linux-c201')
   conflicts=('linux-armv7-rc-chromebook')
   install=${pkgname}.install
 
