better HiFi.conf :)
now with names for the devices in pavucontrol

--- a/usr/share/alsa/ucm/VEYRON-I2S/HiFi.conf
+++ b/usr/share/alsa/ucm/VEYRON-I2S/HiFi.conf
@@ -50,6 +50,7 @@ SectionVerb {
 
 
 SectionDevice."Speaker".0 {
+	Comment "Speakers"
 	Value {
 		PlaybackPCM "hw:VEYRONI2S,0"
 		MixerName "Speaker"
@@ -67,6 +68,7 @@ SectionDevice."Speaker".0 {
 }
 
 SectionDevice."Internal Mic".0 {
+	Comment "Int Mic"
 	Value {
 		CapturePCM "hw:VEYRONI2S,0"
 		MixerName "Int Mic"
@@ -85,6 +87,7 @@ SectionDevice."Internal Mic".0 {
 
 
 SectionDevice."Headphone".0 {
+	Comment "Headphone"
 	Value {
 		JackName "VEYRON-I2S Headset Jack"
 		PlaybackPCM "hw:VEYRONI2S,0"
@@ -109,6 +112,7 @@ SectionDevice."Headphone".0 {
 }
 
 SectionDevice."Mic".0 {
+	Comment "Ext Mic"
 	Value {
 		JackName "VEYRON-I2S Headset Jack"
 		CapturePCM "hw:VEYRONI2S,0"
