cleanup HiFi.conf
this is the version i sent to alsa-devel.
HTH they appreciate the effort of making the whitespaces sane :P

--- a/usr/share/alsa/ucm/VEYRON-I2S/HiFi.conf
+++ b/usr/share/alsa/ucm/VEYRON-I2S/HiFi.conf
@@ -47,13 +47,10 @@ SectionVerb {
 	]
 }
 
-
-
 SectionDevice."Speaker".0 {
-	Comment "Speakers"
+	Comment "Speaker"
 	Value {
 		PlaybackPCM "hw:VEYRONI2S,0"
-		MixerName "Speaker"
 	}
 	EnableSequence [
 		cdev "hw:VEYRONI2S"
@@ -71,7 +68,6 @@ SectionDevice."Internal Mic".0 {
 	Comment "Int Mic"
 	Value {
 		CapturePCM "hw:VEYRONI2S,0"
-		MixerName "Int Mic"
 	}
 	EnableSequence [
 		cdev "hw:VEYRONI2S"
@@ -85,13 +81,11 @@ SectionDevice."Internal Mic".0 {
 	]
 }
 
-
 SectionDevice."Headphone".0 {
 	Comment "Headphone"
 	Value {
 		JackName "VEYRON-I2S Headset Jack"
 		PlaybackPCM "hw:VEYRONI2S,0"
-		MixerName "Headphone"
 		OutputDspName ""
 	}
 
@@ -112,11 +106,10 @@ SectionDevice."Headphone".0 {
 }
 
 SectionDevice."Mic".0 {
-	Comment "Ext Mic"
+	Comment "Headset Mic"
 	Value {
 		JackName "VEYRON-I2S Headset Jack"
 		CapturePCM "hw:VEYRONI2S,0"
-
 	}
 
 	EnableSequence [
