--- a/linux-c201/config
+++ b/linux-c201/config
@@ -1,10 +1,13 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 4.17.0-1 Kernel Configuration
+# Linux/arm 4.18.1-1 Kernel Configuration
+#
+
+#
+# Compiler: gcc (GCC) 8.2.0
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
-CONFIG_NEED_SG_DMA_LENGTH=y
 CONFIG_ARM_DMA_USE_IOMMU=y
 CONFIG_ARM_DMA_IOMMU_ALIGNMENT=8
 CONFIG_MIGHT_HAVE_PCI=y
@@ -17,11 +20,13 @@ CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_FIX_EARLYCON_MEM=y
 CONFIG_GENERIC_HWEIGHT=y
 CONFIG_GENERIC_CALIBRATE_DELAY=y
-CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_ARCH_SUPPORTS_UPROBES=y
 CONFIG_ARM_PATCH_PHYS_VIRT=y
 CONFIG_GENERIC_BUG=y
 CONFIG_PGTABLE_LEVELS=2
+CONFIG_CC_IS_GCC=y
+CONFIG_GCC_VERSION=80200
+CONFIG_CLANG_VERSION=0
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
 
@@ -29,7 +34,6 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 # General setup
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
-CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
 CONFIG_LOCALVERSION="-ARCH"
 # CONFIG_LOCALVERSION_AUTO is not set
@@ -193,6 +197,8 @@ CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_BPF_SYSCALL=y
 # CONFIG_BPF_JIT_ALWAYS_ON is not set
 CONFIG_USERFAULTFD=y
+CONFIG_RSEQ=y
+# CONFIG_DEBUG_RSEQ is not set
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_PERF_USE_VMALLOC=y
@@ -237,8 +243,8 @@ CONFIG_ARCH_HAS_FORTIFY_SOURCE=y
 CONFIG_ARCH_HAS_SET_MEMORY=y
 CONFIG_HAVE_ARCH_THREAD_STRUCT_WHITELIST=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
+CONFIG_HAVE_RSEQ=y
 CONFIG_HAVE_CLK=y
-CONFIG_HAVE_DMA_API_DEBUG=y
 CONFIG_HAVE_HW_BREAKPOINT=y
 CONFIG_HAVE_PERF_REGS=y
 CONFIG_HAVE_PERF_USER_STACK_DUMP=y
@@ -246,13 +252,12 @@ CONFIG_HAVE_ARCH_JUMP_LABEL=y
 CONFIG_ARCH_WANT_IPC_PARSE_VERSION=y
 CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_SECCOMP_FILTER=y
+CONFIG_PLUGIN_HOSTCC="g++"
 CONFIG_HAVE_GCC_PLUGINS=y
 # CONFIG_GCC_PLUGINS is not set
-CONFIG_HAVE_CC_STACKPROTECTOR=y
-# CONFIG_CC_STACKPROTECTOR_NONE is not set
-# CONFIG_CC_STACKPROTECTOR_REGULAR is not set
-# CONFIG_CC_STACKPROTECTOR_STRONG is not set
-CONFIG_CC_STACKPROTECTOR_AUTO=y
+CONFIG_HAVE_STACKPROTECTOR=y
+CONFIG_CC_HAS_STACKPROTECTOR_NONE=y
+# CONFIG_STACKPROTECTOR is not set
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
@@ -281,7 +286,6 @@ CONFIG_REFCOUNT_FULL=y
 #
 # CONFIG_GCOV_KERNEL is not set
 CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
-CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
@@ -469,6 +473,8 @@ CONFIG_ARM_VIRT_EXT=y
 CONFIG_SWP_EMULATE=y
 # CONFIG_CPU_ICACHE_DISABLE is not set
 # CONFIG_CPU_BPREDICT_DISABLE is not set
+CONFIG_CPU_SPECTRE=y
+CONFIG_HARDEN_BRANCH_PREDICTOR=y
 CONFIG_KUSER_HELPERS=y
 CONFIG_VDSO=y
 CONFIG_OUTER_CACHE=y
@@ -505,14 +511,6 @@ CONFIG_ARM_ERRATA_852423=y
 # Bus support
 #
 # CONFIG_PCI is not set
-
-#
-# Cadence PCIe controllers support
-#
-
-#
-# DesignWare PCI Core Support
-#
 
 #
 # PCI Endpoint
@@ -598,8 +596,6 @@ CONFIG_FORCE_MAX_ZONEORDER=12
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
 CONFIG_SECCOMP=y
-CONFIG_SWIOTLB=y
-CONFIG_IOMMU_HELPER=y
 # CONFIG_PARAVIRT is not set
 # CONFIG_PARAVIRT_TIME_ACCOUNTING is not set
 # CONFIG_XEN is not set
@@ -734,6 +730,7 @@ CONFIG_PACKET_DIAG=m
 CONFIG_UNIX=y
 CONFIG_UNIX_DIAG=m
 CONFIG_TLS=m
+# CONFIG_TLS_DEVICE is not set
 CONFIG_XFRM=y
 CONFIG_XFRM_OFFLOAD=y
 CONFIG_XFRM_ALGO=m
@@ -744,7 +741,10 @@ CONFIG_XFRM_MIGRATE=y
 CONFIG_XFRM_IPCOMP=m
 CONFIG_NET_KEY=m
 CONFIG_NET_KEY_MIGRATE=y
+# CONFIG_XDP_SOCKETS is not set
 CONFIG_INET=y
+CONFIG_WIREGUARD=m
+# CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_IP_FIB_TRIE_STATS=y
@@ -837,6 +837,7 @@ CONFIG_IPV6_MROUTE_MULTIPLE_TABLES=y
 CONFIG_IPV6_PIMSM_V2=y
 CONFIG_IPV6_SEG6_LWTUNNEL=y
 CONFIG_IPV6_SEG6_HMAC=y
+CONFIG_IPV6_SEG6_BPF=y
 # CONFIG_NETWORK_SECMARK is not set
 CONFIG_NET_PTP_CLASSIFY=y
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
@@ -894,21 +895,18 @@ CONFIG_NF_NAT_FTP=m
 CONFIG_NF_NAT_IRC=m
 CONFIG_NF_NAT_SIP=m
 CONFIG_NF_NAT_TFTP=m
-CONFIG_NF_NAT_REDIRECT=m
+CONFIG_NF_NAT_REDIRECT=y
 CONFIG_NETFILTER_SYNPROXY=m
+CONFIG_NF_OSF=m
 CONFIG_NF_TABLES=m
+# CONFIG_NF_TABLES_SET is not set
 # CONFIG_NF_TABLES_INET is not set
 # CONFIG_NF_TABLES_NETDEV is not set
-CONFIG_NFT_EXTHDR=m
-CONFIG_NFT_META=m
-CONFIG_NFT_RT=m
 CONFIG_NFT_NUMGEN=m
 CONFIG_NFT_CT=m
 CONFIG_NFT_FLOW_OFFLOAD=m
-CONFIG_NFT_SET_RBTREE=m
-CONFIG_NFT_SET_HASH=m
-CONFIG_NFT_SET_BITMAP=m
 CONFIG_NFT_COUNTER=m
+# CONFIG_NFT_CONNLIMIT is not set
 CONFIG_NFT_LOG=m
 CONFIG_NFT_LIMIT=m
 CONFIG_NFT_MASQ=m
@@ -920,6 +918,7 @@ CONFIG_NFT_QUOTA=m
 CONFIG_NFT_REJECT=m
 CONFIG_NFT_COMPAT=m
 CONFIG_NFT_HASH=m
+# CONFIG_NFT_SOCKET is not set
 # CONFIG_NF_FLOW_TABLE_INET is not set
 CONFIG_NF_FLOW_TABLE=m
 CONFIG_NETFILTER_XTABLES=m
@@ -1053,6 +1052,7 @@ CONFIG_IP_VS_LBLC=m
 CONFIG_IP_VS_LBLCR=m
 CONFIG_IP_VS_DH=m
 CONFIG_IP_VS_SH=m
+# CONFIG_IP_VS_MH is not set
 CONFIG_IP_VS_SED=m
 CONFIG_IP_VS_NQ=m
 
@@ -1060,6 +1060,11 @@ CONFIG_IP_VS_NQ=m
 # IPVS SH scheduler
 #
 CONFIG_IP_VS_SH_TAB_BITS=8
+
+#
+# IPVS MH scheduler
+#
+CONFIG_IP_VS_MH_TAB_INDEX=12
 
 #
 # IPVS application helper
@@ -1074,6 +1079,7 @@ CONFIG_IP_VS_PE_SIP=m
 CONFIG_NF_DEFRAG_IPV4=m
 CONFIG_NF_CONNTRACK_IPV4=m
 CONFIG_NF_SOCKET_IPV4=m
+CONFIG_NF_TPROXY_IPV4=m
 # CONFIG_NF_TABLES_IPV4 is not set
 # CONFIG_NF_TABLES_ARP is not set
 CONFIG_NF_FLOW_TABLE_IPV4=m
@@ -1082,7 +1088,7 @@ CONFIG_NF_LOG_ARP=m
 CONFIG_NF_LOG_IPV4=m
 CONFIG_NF_REJECT_IPV4=m
 CONFIG_NF_NAT_IPV4=m
-CONFIG_NF_NAT_MASQUERADE_IPV4=m
+CONFIG_NF_NAT_MASQUERADE_IPV4=y
 CONFIG_NF_NAT_SNMP_BASIC=m
 CONFIG_NF_NAT_PROTO_GRE=m
 CONFIG_NF_NAT_PPTP=m
@@ -1114,13 +1120,14 @@ CONFIG_IP_NF_ARP_MANGLE=m
 CONFIG_NF_DEFRAG_IPV6=m
 CONFIG_NF_CONNTRACK_IPV6=m
 CONFIG_NF_SOCKET_IPV6=m
+CONFIG_NF_TPROXY_IPV6=m
 # CONFIG_NF_TABLES_IPV6 is not set
 CONFIG_NF_FLOW_TABLE_IPV6=m
 CONFIG_NF_DUP_IPV6=m
 CONFIG_NF_REJECT_IPV6=m
 CONFIG_NF_LOG_IPV6=m
 CONFIG_NF_NAT_IPV6=m
-CONFIG_NF_NAT_MASQUERADE_IPV6=m
+CONFIG_NF_NAT_MASQUERADE_IPV6=y
 CONFIG_IP6_NF_IPTABLES=m
 CONFIG_IP6_NF_MATCH_AH=m
 CONFIG_IP6_NF_MATCH_EUI64=m
@@ -1163,6 +1170,7 @@ CONFIG_BRIDGE_EBT_REDIRECT=m
 CONFIG_BRIDGE_EBT_SNAT=m
 CONFIG_BRIDGE_EBT_LOG=m
 CONFIG_BRIDGE_EBT_NFLOG=m
+# CONFIG_BPFILTER is not set
 # CONFIG_IP_DCCP is not set
 # CONFIG_IP_SCTP is not set
 # CONFIG_RDS is not set
@@ -1402,6 +1410,7 @@ CONFIG_DST_CACHE=y
 CONFIG_GRO_CELLS=y
 CONFIG_NET_DEVLINK=m
 CONFIG_MAY_USE_DEVLINK=m
+# CONFIG_FAILOVER is not set
 CONFIG_HAVE_EBPF_JIT=y
 
 #
@@ -1417,6 +1426,10 @@ CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
+
+#
+# Firmware loader
+#
 CONFIG_FW_LOADER=y
 CONFIG_EXTRA_FIRMWARE=""
 CONFIG_FW_LOADER_USER_HELPER=y
@@ -1554,6 +1567,7 @@ CONFIG_BLK_DEV=y
 CONFIG_CDROM=y
 CONFIG_ZRAM=m
 # CONFIG_ZRAM_WRITEBACK is not set
+# CONFIG_ZRAM_MEMORY_TRACKING is not set
 CONFIG_BLK_DEV_LOOP=m
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 # CONFIG_BLK_DEV_CRYPTOLOOP is not set
@@ -1729,6 +1743,7 @@ CONFIG_DM_SNAPSHOT=m
 CONFIG_DM_THIN_PROVISIONING=m
 CONFIG_DM_CACHE=m
 CONFIG_DM_CACHE_SMQ=m
+# CONFIG_DM_WRITECACHE is not set
 CONFIG_DM_ERA=m
 CONFIG_DM_MIRROR=m
 CONFIG_DM_LOG_USERSPACE=m
@@ -1801,6 +1816,7 @@ CONFIG_MDIO_BUS=m
 # CONFIG_MDIO_BUS_MUX_GPIO is not set
 # CONFIG_MDIO_BUS_MUX_MMIOREG is not set
 # CONFIG_MDIO_HISI_FEMAC is not set
+# CONFIG_MDIO_MSCC_MIIM is not set
 CONFIG_PHYLIB=m
 CONFIG_SWPHY=y
 CONFIG_LED_TRIGGER_PHY=y
@@ -1810,6 +1826,7 @@ CONFIG_LED_TRIGGER_PHY=y
 #
 # CONFIG_AMD_PHY is not set
 # CONFIG_AQUANTIA_PHY is not set
+# CONFIG_ASIX_PHY is not set
 # CONFIG_AT803X_PHY is not set
 # CONFIG_BCM7XXX_PHY is not set
 # CONFIG_BCM87XX_PHY is not set
@@ -1818,6 +1835,7 @@ CONFIG_LED_TRIGGER_PHY=y
 # CONFIG_CORTINA_PHY is not set
 # CONFIG_DAVICOM_PHY is not set
 # CONFIG_DP83822_PHY is not set
+# CONFIG_DP83TC811_PHY is not set
 # CONFIG_DP83848_PHY is not set
 # CONFIG_DP83867_PHY is not set
 CONFIG_FIXED_PHY=m
@@ -1829,6 +1847,7 @@ CONFIG_FIXED_PHY=m
 # CONFIG_MARVELL_10G_PHY is not set
 # CONFIG_MICREL_PHY is not set
 CONFIG_MICROCHIP_PHY=m
+# CONFIG_MICROCHIP_T1_PHY is not set
 # CONFIG_MICROSEMI_PHY is not set
 # CONFIG_NATIONAL_PHY is not set
 # CONFIG_QSEMI_PHY is not set
@@ -1992,6 +2011,7 @@ CONFIG_USB_NET_RNDIS_WLAN=m
 #
 # CONFIG_WAN is not set
 # CONFIG_NETDEVSIM is not set
+# CONFIG_NET_FAILOVER is not set
 # CONFIG_ISDN is not set
 
 #
@@ -2245,6 +2265,7 @@ CONFIG_I2C_CROS_EC_TUNNEL=y
 CONFIG_SPI=y
 # CONFIG_SPI_DEBUG is not set
 CONFIG_SPI_MASTER=y
+CONFIG_SPI_MEM=y
 
 #
 # SPI Master Controller Drivers
@@ -2320,10 +2341,12 @@ CONFIG_PINCTRL_SX150X=y
 CONFIG_PINCTRL_RK805=y
 CONFIG_ARCH_HAVE_CUSTOM_GPIO_H=y
 CONFIG_GPIOLIB=y
+CONFIG_GPIOLIB_FASTPATH_LIMIT=512
 CONFIG_OF_GPIO=y
 CONFIG_GPIOLIB_IRQCHIP=y
 # CONFIG_DEBUG_GPIO is not set
 CONFIG_GPIO_SYSFS=y
+# CONFIG_GPIO_OF_HELPER is not set
 CONFIG_GPIO_GENERIC=y
 
 #
@@ -2419,6 +2442,8 @@ CONFIG_CHARGER_GPIO=m
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
 # CONFIG_CHARGER_RT9455 is not set
+CONFIG_POWER_SEQUENCE=y
+# CONFIG_PWRSEQ_GENERIC is not set
 CONFIG_HWMON=y
 # CONFIG_HWMON_DEBUG_CHIP is not set
 
@@ -2752,6 +2777,7 @@ CONFIG_REGULATOR_GPIO=y
 # CONFIG_REGULATOR_PV88090 is not set
 CONFIG_REGULATOR_PWM=y
 CONFIG_REGULATOR_RK808=y
+# CONFIG_REGULATOR_SY8106A is not set
 # CONFIG_REGULATOR_TPS51632 is not set
 # CONFIG_REGULATOR_TPS62360 is not set
 # CONFIG_REGULATOR_TPS65023 is not set
@@ -2870,6 +2896,7 @@ CONFIG_VIDEO_USBTV=m
 #
 CONFIG_VIDEO_AU0828=m
 CONFIG_VIDEO_AU0828_V4L2=y
+# CONFIG_VIDEO_CX231XX is not set
 
 #
 # Digital TV USB devices
@@ -2906,6 +2933,7 @@ CONFIG_VIDEO_EM28XX_DVB=m
 CONFIG_USB_PULSE8_CEC=m
 CONFIG_USB_RAINSHADOW_CEC=m
 CONFIG_V4L_PLATFORM_DRIVERS=y
+# CONFIG_VIDEO_CADENCE is not set
 CONFIG_VIDEO_MUX=m
 CONFIG_SOC_CAMERA=m
 CONFIG_SOC_CAMERA_PLATFORM=m
@@ -3158,7 +3186,7 @@ CONFIG_DRM=y
 CONFIG_DRM_MIPI_DSI=y
 CONFIG_DRM_DP_AUX_CHARDEV=y
 # CONFIG_DRM_DEBUG_MM is not set
-# CONFIG_DRM_DEBUG_MM_SELFTEST is not set
+# CONFIG_DRM_DEBUG_SELFTEST is not set
 CONFIG_DRM_KMS_HELPER=y
 CONFIG_DRM_KMS_FB_HELPER=y
 CONFIG_DRM_FBDEV_EMULATION=y
@@ -3169,9 +3197,11 @@ CONFIG_DRM_GEM_CMA_HELPER=y
 #
 # I2C encoder or helper chips
 #
+# CONFIG_DRM_I2C_ADIHDMI is not set
 CONFIG_DRM_I2C_CH7006=m
 CONFIG_DRM_I2C_SIL164=m
 CONFIG_DRM_I2C_NXP_TDA998X=m
+# CONFIG_DRM_I2C_NXP_TDA9950 is not set
 # CONFIG_DRM_HDLCD is not set
 # CONFIG_DRM_MALI_DISPLAY is not set
 
@@ -3231,6 +3261,7 @@ CONFIG_DRM_PANEL_BRIDGE=y
 # Display Interface Bridges
 #
 CONFIG_DRM_ANALOGIX_ANX78XX=m
+# CONFIG_DRM_CDNS_DSI is not set
 CONFIG_DRM_DUMB_VGA_DAC=m
 # CONFIG_DRM_LVDS_ENCODER is not set
 # CONFIG_DRM_MEGACHIPS_STDPXXXX_GE_B850V3_FW is not set
@@ -3238,6 +3269,7 @@ CONFIG_DRM_NXP_PTN3460=m
 CONFIG_DRM_PARADE_PS8622=m
 CONFIG_DRM_SII902X=m
 # CONFIG_DRM_SII9234 is not set
+# CONFIG_DRM_THINE_THC63LVD1024 is not set
 CONFIG_DRM_TOSHIBA_TC358767=m
 CONFIG_DRM_TI_TFP410=m
 CONFIG_DRM_ANALOGIX_DP=y
@@ -3290,7 +3322,6 @@ CONFIG_FB_TILEBLITTING=y
 # CONFIG_FB_VIRTUAL is not set
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_BROADSHEET is not set
-# CONFIG_FB_AUO_K190X is not set
 # CONFIG_FB_SIMPLE is not set
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
@@ -3308,6 +3339,7 @@ CONFIG_LCD_PLATFORM=y
 # CONFIG_LCD_AMS369FG06 is not set
 # CONFIG_LCD_LMS501KF03 is not set
 # CONFIG_LCD_HX8357 is not set
+# CONFIG_LCD_OTM3225A is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_GENERIC=m
 CONFIG_BACKLIGHT_PWM=y
@@ -3492,6 +3524,7 @@ CONFIG_SND_SOC_RT5645=m
 CONFIG_SND_SOC_SGTL5000=m
 # CONFIG_SND_SOC_SIRF_AUDIO_CODEC is not set
 CONFIG_SND_SOC_SPDIF=m
+# CONFIG_SND_SOC_SSM2305 is not set
 # CONFIG_SND_SOC_SSM2602_SPI is not set
 # CONFIG_SND_SOC_SSM2602_I2C is not set
 # CONFIG_SND_SOC_SSM4567 is not set
@@ -3514,6 +3547,7 @@ CONFIG_SND_SOC_TLV320AIC31XX=m
 CONFIG_SND_SOC_TLV320AIC3X=m
 CONFIG_SND_SOC_TS3A227E=m
 # CONFIG_SND_SOC_TSCS42XX is not set
+# CONFIG_SND_SOC_TSCS454 is not set
 # CONFIG_SND_SOC_WM8510 is not set
 # CONFIG_SND_SOC_WM8523 is not set
 # CONFIG_SND_SOC_WM8524 is not set
@@ -3527,6 +3561,7 @@ CONFIG_SND_SOC_WM8731=m
 CONFIG_SND_SOC_WM8753=m
 # CONFIG_SND_SOC_WM8770 is not set
 # CONFIG_SND_SOC_WM8776 is not set
+# CONFIG_SND_SOC_WM8782 is not set
 # CONFIG_SND_SOC_WM8804_I2C is not set
 # CONFIG_SND_SOC_WM8804_SPI is not set
 CONFIG_SND_SOC_WM8903=m
@@ -3537,6 +3572,7 @@ CONFIG_SND_SOC_WM8962=m
 # CONFIG_SND_SOC_WM8985 is not set
 # CONFIG_SND_SOC_ZX_AUD96P22 is not set
 # CONFIG_SND_SOC_MAX9759 is not set
+# CONFIG_SND_SOC_MT6351 is not set
 # CONFIG_SND_SOC_NAU8540 is not set
 # CONFIG_SND_SOC_NAU8810 is not set
 # CONFIG_SND_SOC_NAU8824 is not set
@@ -3610,6 +3646,7 @@ CONFIG_LOGIG940_FF=y
 CONFIG_LOGIWHEELS_FF=y
 CONFIG_HID_MAGICMOUSE=m
 CONFIG_HID_MAYFLASH=m
+# CONFIG_HID_REDRAGON is not set
 CONFIG_HID_MICROSOFT=m
 CONFIG_HID_MONTEREY=m
 CONFIG_HID_MULTITOUCH=m
@@ -3634,6 +3671,7 @@ CONFIG_HID_SAMSUNG=m
 CONFIG_HID_SONY=m
 CONFIG_SONY_FF=y
 CONFIG_HID_SPEEDLINK=m
+# CONFIG_HID_STEAM is not set
 CONFIG_HID_STEELSERIES=m
 CONFIG_HID_SUNPLUS=m
 CONFIG_HID_RMI=m
@@ -3898,6 +3936,7 @@ CONFIG_MMC_SDHCI_CADENCE=y
 # CONFIG_MMC_SPI is not set
 CONFIG_MMC_DW=y
 CONFIG_MMC_DW_PLTFM=y
+# CONFIG_MMC_DW_BLUEFIELD is not set
 # CONFIG_MMC_DW_EXYNOS is not set
 # CONFIG_MMC_DW_HI3798CV200 is not set
 # CONFIG_MMC_DW_K3 is not set
@@ -3922,9 +3961,11 @@ CONFIG_LEDS_BRIGHTNESS_HW_CHANGED=y
 # CONFIG_LEDS_AS3645A is not set
 CONFIG_LEDS_BCM6328=m
 CONFIG_LEDS_BCM6358=m
+# CONFIG_LEDS_CR0014114 is not set
 CONFIG_LEDS_LM3530=m
 CONFIG_LEDS_LM3642=m
 # CONFIG_LEDS_LM3692X is not set
+# CONFIG_LEDS_LM3601X is not set
 CONFIG_LEDS_PCA9532=m
 CONFIG_LEDS_PCA9532_GPIO=y
 CONFIG_LEDS_GPIO=y
@@ -4154,8 +4195,6 @@ CONFIG_VIRTIO=y
 # Microsoft Hyper-V guest support
 #
 CONFIG_STAGING=y
-# CONFIG_IPX is not set
-# CONFIG_NCP_FS is not set
 # CONFIG_PRISM2_USB is not set
 # CONFIG_COMEDI is not set
 CONFIG_RTLLIB=m
@@ -4175,9 +4214,7 @@ CONFIG_88EU_AP_MODE=y
 #
 # Accelerometers
 #
-CONFIG_ADIS16201=m
 CONFIG_ADIS16203=m
-CONFIG_ADIS16209=m
 CONFIG_ADIS16240=m
 
 #
@@ -4222,17 +4259,8 @@ CONFIG_ADIS16060=m
 CONFIG_AD5933=m
 
 #
-# Light sensors
-#
-CONFIG_TSL2x7x=m
-
-#
 # Active energy metering IC
 #
-CONFIG_ADE7753=m
-CONFIG_ADE7754=m
-CONFIG_ADE7758=m
-CONFIG_ADE7759=m
 CONFIG_ADE7854=m
 CONFIG_ADE7854_I2C=m
 CONFIG_ADE7854_SPI=m
@@ -4241,7 +4269,6 @@ CONFIG_ADE7854_SPI=m
 # Resolver to digital converters
 #
 CONFIG_AD2S90=m
-CONFIG_AD2S1200=m
 CONFIG_AD2S1210=m
 
 #
@@ -4257,7 +4284,6 @@ CONFIG_SOC_CAMERA_MT9T031=m
 #
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_LTE_GDM724X is not set
-# CONFIG_LNET is not set
 # CONFIG_GS_FPGABOOT is not set
 # CONFIG_UNISYSSPAR is not set
 # CONFIG_COMMON_CLK_XLNX_CLKWZRD is not set
@@ -4421,6 +4447,8 @@ CONFIG_IIO_TRIGGERED_EVENT=m
 #
 # Accelerometers
 #
+CONFIG_ADIS16201=m
+CONFIG_ADIS16209=m
 # CONFIG_ADXL345_I2C is not set
 # CONFIG_ADXL345_SPI is not set
 CONFIG_BMA180=m
@@ -4503,6 +4531,11 @@ CONFIG_TI_TLC4541=m
 CONFIG_VF610_ADC=m
 
 #
+# Analog Front Ends
+#
+# CONFIG_IIO_RESCALE is not set
+
+#
 # Amplifiers
 #
 CONFIG_AD8366=m
@@ -4552,7 +4585,8 @@ CONFIG_AD5593R=m
 CONFIG_AD5504=m
 CONFIG_AD5624R_SPI=m
 CONFIG_LTC2632=m
-CONFIG_AD5686=m
+# CONFIG_AD5686_SPI is not set
+# CONFIG_AD5696_I2C is not set
 CONFIG_AD5755=m
 CONFIG_AD5761=m
 CONFIG_AD5764=m
@@ -4567,6 +4601,7 @@ CONFIG_MAX5821=m
 CONFIG_MCP4725=m
 CONFIG_MCP4922=m
 CONFIG_TI_DAC082S085=m
+# CONFIG_TI_DAC5571 is not set
 CONFIG_VF610_DAC=m
 
 #
@@ -4688,6 +4723,7 @@ CONFIG_TCS3414=m
 CONFIG_TCS3472=m
 CONFIG_SENSORS_TSL2563=m
 CONFIG_TSL2583=m
+# CONFIG_TSL2772 is not set
 CONFIG_TSL4531=m
 CONFIG_US5182D=m
 CONFIG_VCNL4000=m
@@ -4792,6 +4828,11 @@ CONFIG_SX9500=m
 CONFIG_SRF08=m
 
 #
+# Resolver to digital converters
+#
+CONFIG_AD2S1200=m
+
+#
 # Temperature sensors
 #
 CONFIG_MAXIM_THERMOCOUPLE=m
@@ -4847,8 +4888,7 @@ CONFIG_PHY_TUSB1210=m
 #
 # Performance monitor support
 #
-# CONFIG_ARM_CCI400_PMU is not set
-# CONFIG_ARM_CCI5xx_PMU is not set
+# CONFIG_ARM_CCI_PMU is not set
 # CONFIG_ARM_CCN is not set
 CONFIG_ARM_PMU=y
 CONFIG_RAS=y
@@ -4943,6 +4983,7 @@ CONFIG_QUOTA_NETLINK_INTERFACE=y
 # CONFIG_QFMT_V2 is not set
 CONFIG_QUOTACTL=y
 # CONFIG_AUTOFS4_FS is not set
+# CONFIG_AUTOFS_FS is not set
 CONFIG_FUSE_FS=m
 CONFIG_CUSE=m
 CONFIG_OVERLAY_FS=y
@@ -4963,7 +5004,6 @@ CONFIG_ISO9660_FS=m
 CONFIG_JOLIET=y
 CONFIG_ZISOFS=y
 CONFIG_UDF_FS=m
-CONFIG_UDF_NLS=y
 
 #
 # DOS/FAT/NT Filesystems
@@ -4990,6 +5030,7 @@ CONFIG_SYSFS=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_TMPFS_XATTR=y
+CONFIG_MEMFD_CREATE=y
 CONFIG_CONFIGFS_FS=y
 CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ORANGEFS_FS is not set
@@ -5137,6 +5178,9 @@ CONFIG_ARCH_HAS_DEBUG_VIRTUAL=y
 # CONFIG_DEBUG_MEMORY_INIT is not set
 # CONFIG_DEBUG_PER_CPU_MAPS is not set
 # CONFIG_DEBUG_HIGHMEM is not set
+CONFIG_ARCH_HAS_KCOV=y
+CONFIG_CC_HAS_SANCOV_TRACE_PC=y
+# CONFIG_KCOV is not set
 # CONFIG_DEBUG_SHIRQ is not set
 
 #
@@ -5303,6 +5347,11 @@ CONFIG_CRYPTO_ENGINE=m
 CONFIG_CRYPTO_CCM=m
 CONFIG_CRYPTO_GCM=m
 CONFIG_CRYPTO_CHACHA20POLY1305=m
+# CONFIG_CRYPTO_AEGIS128 is not set
+# CONFIG_CRYPTO_AEGIS128L is not set
+# CONFIG_CRYPTO_AEGIS256 is not set
+# CONFIG_CRYPTO_MORUS640 is not set
+# CONFIG_CRYPTO_MORUS1280 is not set
 CONFIG_CRYPTO_SEQIV=y
 CONFIG_CRYPTO_ECHAINIV=m
 
@@ -5384,6 +5433,7 @@ CONFIG_CRYPTO_LZO=y
 # CONFIG_CRYPTO_842 is not set
 CONFIG_CRYPTO_LZ4=m
 CONFIG_CRYPTO_LZ4HC=m
+# CONFIG_CRYPTO_ZSTD is not set
 
 #
 # Random Number Generation
@@ -5491,6 +5541,9 @@ CONFIG_ASSOCIATIVE_ARRAY=y
 CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT_MAP=y
 CONFIG_HAS_DMA=y
+CONFIG_NEED_SG_DMA_LENGTH=y
+CONFIG_NEED_DMA_MAP_STATE=y
+CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_SGL_ALLOC=y
 CONFIG_CPU_RMAP=y
 CONFIG_DQL=y
