--- a/linux-c201/PKGBUILD
+++ b/linux-c201/PKGBUILD
@@ -11,7 +11,7 @@ _srcname=linux-4.18
 _kernelname=${pkgbase#linux}
 _desc="ARMv7 multi-platform"
 pkgver=4.18.1
-pkgrel=1
+pkgrel=5
 rcnrel=armv7-x3
 arch=('armv7h')
 url="http://www.kernel.org/"
@@ -37,39 +37,13 @@ source=("http://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
         '0014-ARM-mvebu-declare-asm-symbols-as-character-arrays-in.patch'
 	'0020-clk-rockchip-HDMI-clock-improvements-from-ChromeOS-3.patch'
 	'0021-drm-rockchip-dw_hdmi-rockchip-clock-improvements-fro.patch'
+	'0022-dedicate-npll.patch'
         'kernel.its'
         'kernel.keyblock'
         'kernel_data_key.vbprivk'
         'linux.preset'
         '99-linux.hook'
         'config')
-
-md5sums=('bee5fe53ee1c3142b8f0c12c0d3348f9'
-         'bc8d68c9508576e62008c186a4c13668'
-         'eeb65d78a2d5e2799a50e2effc2a6aad'
-         'fb218c1825366e722be83dd705d02822'
-         'bfeb8670a65fc8c14a7076ec623e9898'
-         '1651316b545214bb346af28f3925ccd0'
-         '625bc1c129c076f85a0794277438fbf3'
-         '95ffcc1c52475c1de2e5478c4896f0ca'
-         '5d8b1483f219edd892536e26663d16c7'
-         '8be87b6399b1cabbca28ee3592d5a9c9'
-         '0fcaafdce5964746e7de8c2bfd8a3421'
-         'd1f48c3560244b8d37084ec316b412d1'
-         'ec013d7dcb738d91ebe668addc96af8f'
-         '2d2e38af1b7db6d27babb8e072c144fc'
-         'eb51f5bbcf5b38956a0ba931d7898f07'
-         'cd9f373ec6e45e99610c9892a8e38100'
-         '8b896e19eac2b3bff797c48e737a166b'
-         '22f62d8236eae4514bb1c4e5f0abde8f'
-         'c2628bcc70d1d26c1f2be92b0dfe98e3'
-         '9751afcc5d59bf5d34561efbe7fc1fec'
-         '61c5ff73c136ed07a7aadbf58db3d96a'
-         '584777ae88bce2c5659960151b64c7d8'
-         'fb034fe5f2e28a4cce30ae2d8cf6be3c'
-         '79fa396e3f9a09a85156d6d7c2d34b58'
-         'SKIP')
-
 
 prepare() {
   cd "${srcdir}/${_srcname}"
@@ -97,6 +71,7 @@ prepare() {
   GIT_DIR=/tmp git apply ../0014-ARM-mvebu-declare-asm-symbols-as-character-arrays-in.patch
   GIT_DIR=/tmp git apply ../0020-clk-rockchip-HDMI-clock-improvements-from-ChromeOS-3.patch
   GIT_DIR=/tmp git apply ../0021-drm-rockchip-dw_hdmi-rockchip-clock-improvements-fro.patch
+  GIT_DIR=/tmp git apply ../0022-dedicate-npll.patch
 
   cat "${srcdir}/config" > ./.config
 
@@ -342,3 +317,30 @@ for _p in ${pkgname[@]}; do
     _package${_p#${pkgbase}}
   }"
 done
+
+md5sums=('bee5fe53ee1c3142b8f0c12c0d3348f9'
+         'bc8d68c9508576e62008c186a4c13668'
+         'eeb65d78a2d5e2799a50e2effc2a6aad'
+         'fb218c1825366e722be83dd705d02822'
+         'bfeb8670a65fc8c14a7076ec623e9898'
+         '1651316b545214bb346af28f3925ccd0'
+         '625bc1c129c076f85a0794277438fbf3'
+         '95ffcc1c52475c1de2e5478c4896f0ca'
+         '5d8b1483f219edd892536e26663d16c7'
+         '8be87b6399b1cabbca28ee3592d5a9c9'
+         '0fcaafdce5964746e7de8c2bfd8a3421'
+         'd1f48c3560244b8d37084ec316b412d1'
+         'ec013d7dcb738d91ebe668addc96af8f'
+         '2d2e38af1b7db6d27babb8e072c144fc'
+         'eb51f5bbcf5b38956a0ba931d7898f07'
+         'cd9f373ec6e45e99610c9892a8e38100'
+         '8b896e19eac2b3bff797c48e737a166b'
+         '22f62d8236eae4514bb1c4e5f0abde8f'
+         'c2628bcc70d1d26c1f2be92b0dfe98e3'
+         'ea8068e29c199dcf8ff7251e3705060a'
+         '9751afcc5d59bf5d34561efbe7fc1fec'
+         '61c5ff73c136ed07a7aadbf58db3d96a'
+         '584777ae88bce2c5659960151b64c7d8'
+         'fb034fe5f2e28a4cce30ae2d8cf6be3c'
+         '79fa396e3f9a09a85156d6d7c2d34b58'
+         'b7d6b303ca9a22a04b902bd389287657')
