Add pulseaudio volume controls to xbindkeysrc

--- a/homedir/.xbindkeysrc
+++ b/homedir/.xbindkeysrc
@@ -1,4 +1,16 @@
+# Brightness down
 "~/bl_down.sh"
    F13
+# Brightness up
 "~/bl_up.sh"
    F14
+# Increase volume
+"pactl set-sink-volume @DEFAULT_SINK@ +5%"
+   XF86AudioRaiseVolume
+# Decrease volume
+"pactl set-sink-volume @DEFAULT_SINK@ -5%"
+   XF86AudioLowerVolume
+# Mute volume
+"pactl set-sink-mute @DEFAULT_SINK@ toggle"
+   XF86AudioMute
+
