last of the 4.18.5 things

--- a/linux-c201/PKGBUILD
+++ b/linux-c201/PKGBUILD
@@ -95,7 +95,7 @@ build() {
   # ... or manually edit .config
 
   # Copy back our configuration (use with new kernel version)
-  cp ./.config ../${pkgbase}.config
+  cp ./.config ../../config
 
   ####################
   # stop here
