--- a/linux-c201/PKGBUILD
+++ b/linux-c201/PKGBUILD
@@ -10,9 +10,9 @@ pkgbase=linux-c201
 _srcname=linux-4.18
 _kernelname=${pkgbase#linux}
 _desc="ARMv7 multi-platform"
-pkgver=4.18.5
+pkgver=4.18.7
 pkgrel=2
-rcnrel=armv7-x6
+rcnrel=armv7-x7
 arch=('armv7h')
 url="http://www.kernel.org/"
 license=('GPL2')
@@ -36,6 +36,7 @@ source=("http://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
         '0013-ARM-dts-imx6q-evi-Fix-onboard-hub-reset-line.patch'
         '0014-ARM-mvebu-declare-asm-symbols-as-character-arrays-in.patch'
 	'0020-RK3288-HDMI-clock-hacks-combined.patch'
+	'0021-usb-dwc2-disable-power-down-for-rockchip-and-amlogic.patch'
         'kernel.its'
         'kernel.keyblock'
         'kernel_data_key.vbprivk'
@@ -70,6 +71,7 @@ prepare() {
 
   # arch-c201 patches
   GIT_DIR=/tmp git apply ../0020-RK3288-HDMI-clock-hacks-combined.patch
+  GIT_DIR=/tmp git apply ../0021-usb-dwc2-disable-power-down-for-rockchip-and-amlogic.patch
 
   cat "${srcdir}/config" > ./.config
 
@@ -88,10 +90,10 @@ build() {
 
   # load configuration
   # Configure the kernel. Replace the line below with one of your choice.
-  #make menuconfig # CLI menu for configuration
+  make menuconfig # CLI menu for configuration
   #make nconfig # new CLI menu for configuration
   #make xconfig # X-based configuration
-  make oldconfig # using old config from previous kernel version
+  #make oldconfig # using old config from previous kernel version
   # ... or manually edit .config
 
   # Copy back our configuration (use with new kernel version)
@@ -317,8 +319,8 @@ for _p in ${pkgname[@]}; do
 done
 
 md5sums=('bee5fe53ee1c3142b8f0c12c0d3348f9'
-         'c49635fe383e69a7a134d633912d646a'
-         'f69b1e09bfe4bb4044f1dafec3ae1647'
+         '43d8677d6457878ec266796b17f5882d'
+         '195c07c854bb78b870059aac088e971e'
          'fb218c1825366e722be83dd705d02822'
          'bfeb8670a65fc8c14a7076ec623e9898'
          '1651316b545214bb346af28f3925ccd0'
@@ -334,9 +336,10 @@ md5sums=('bee5fe53ee1c3142b8f0c12c0d3348f9'
          'cd9f373ec6e45e99610c9892a8e38100'
          '8b896e19eac2b3bff797c48e737a166b'
          '64e5b711488df8205a27bae53f1a5844'
+         'ca07019fbd95dd71d2992960443ebbc2'
          '9751afcc5d59bf5d34561efbe7fc1fec'
          '61c5ff73c136ed07a7aadbf58db3d96a'
          '584777ae88bce2c5659960151b64c7d8'
          'fb034fe5f2e28a4cce30ae2d8cf6be3c'
          '79fa396e3f9a09a85156d6d7c2d34b58'
-         '7fc4574cf1f8425182727aa87bb1d33a')
+         'SKIP')
