--- a/linux-c201/PKGBUILD
+++ b/linux-c201/PKGBUILD
@@ -11,7 +11,7 @@ _srcname=linux-4.18
 _kernelname=${pkgbase#linux}
 _desc="ARMv7 multi-platform"
 pkgver=4.18.7
-pkgrel=3
+pkgrel=4
 rcnrel=armv7-x7
 arch=('armv7h')
 url="http://www.kernel.org/"
@@ -37,6 +37,7 @@ source=("http://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
         '0014-ARM-mvebu-declare-asm-symbols-as-character-arrays-in.patch'
 	'0020-RK3288-HDMI-clock-hacks-combined.patch'
 	'0021-usb-dwc2-disable-power-down-for-rockchip-and-amlogic.patch'
+	'0022-dwc2-mode-hack.patch'
         'kernel.its'
         'kernel.keyblock'
         'kernel_data_key.vbprivk'
@@ -72,6 +73,7 @@ prepare() {
   # arch-c201 patches
   GIT_DIR=/tmp git apply ../0020-RK3288-HDMI-clock-hacks-combined.patch
   GIT_DIR=/tmp git apply ../0021-usb-dwc2-disable-power-down-for-rockchip-and-amlogic.patch
+  GIT_DIR=/tmp git apply ../0022-dwc2-mode-hack.patch
 
   cat "${srcdir}/config" > ./.config
 
@@ -337,6 +339,7 @@ md5sums=('bee5fe53ee1c3142b8f0c12c0d3348f9'
          '8b896e19eac2b3bff797c48e737a166b'
          '64e5b711488df8205a27bae53f1a5844'
          'ca07019fbd95dd71d2992960443ebbc2'
+         '0a11ff16a180483af1acf21b7dc72cf8'
          '9751afcc5d59bf5d34561efbe7fc1fec'
          '61c5ff73c136ed07a7aadbf58db3d96a'
          '584777ae88bce2c5659960151b64c7d8'
